force-app/main/default/objects/Session__c/fields/Abstract__c.field-meta.xml
<CustomField>
    <fullName>Abstract__c</fullName>
    <label>Abstract</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>