force-app/main/default/objects/Session__c/fields/AllEvaluationsComplete__c.field-meta.xml
<CustomField>
    <fullName>AllEvaluationsComplete__c</fullName>
    <label>All Complete</label>
    <type>Checkbox</type>
    <formula
  >EvaluationsSubmitted__c = EvaluationsExpected__c &amp;&amp; EvaluationsExpected__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>