force-app/main/default/objects/Session__c/fields/ClarityAvg__c.field-meta.xml
<CustomField>
    <fullName>ClarityAvg__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Clarity Avg</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>