force-app/main/default/objects/Session__c/fields/ClaritySum__c.field-meta.xml
<CustomField>
    <fullName>ClaritySum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Clarity Sum</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>