force-app/main/default/objects/Session__c/fields/ContentAvg__c.field-meta.xml
<CustomField>
    <fullName>ContentAvg__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Content Avg</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>