force-app/main/default/objects/Session__c/fields/CoSpeakerBio__c.field-meta.xml
<CustomField>
    <fullName>CoSpeakerBio__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <label>Co-Speaker Bio</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>