force-app/main/default/objects/Session__c/fields/CoSpeakerContact__c.field-meta.xml
<CustomField>
    <fullName>CoSpeakerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Speaker Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sessions (Co-Speaker)</relationshipLabel>
    <relationshipName>CoSpeakerSessions</relationshipName>
    <type>Lookup</type>
</CustomField>