force-app/main/default/objects/Session__c/fields/CoSpeakerEmail__c.field-meta.xml
<CustomField>
    <fullName>CoSpeakerEmail__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <label>Co-Speaker Email</label>
    <type>Email</type>
</CustomField>