force-app/main/default/objects/Session__c/fields/CoSpeakerJobTitle__c.field-meta.xml
<CustomField>
    <fullName>CoSpeakerJobTitle__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <label>Co-Speaker Job Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>