force-app/main/default/objects/Session__c/fields/CoSpeakerName__c.field-meta.xml
<CustomField>
    <fullName>CoSpeakerName__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <label>Co-Speaker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>