force-app/main/default/objects/Session__c/fields/DiversityAvg__c.field-meta.xml
<CustomField>
    <fullName>DiversityAvg__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Diversity Avg</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>