force-app/main/default/objects/Session__c/fields/DurationMinutes__c.field-meta.xml
<CustomField>
    <fullName>DurationMinutes__c</fullName>
    <label>Duration (Min)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>