force-app/main/default/objects/Session__c/fields/EngagementAvg__c.field-meta.xml
<CustomField>
    <fullName>EngagementAvg__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Engagement Avg</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>