force-app/main/default/objects/Session__c/fields/EngagementSum__c.field-meta.xml
<CustomField>
    <fullName>EngagementSum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Engagement Sum</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>