force-app/main/default/objects/Session__c/fields/EvaluationsExpected__c.field-meta.xml
<CustomField>
    <fullName>EvaluationsExpected__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expected Evaluations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>