force-app/main/default/objects/Session__c/fields/EvaluationsSubmitted__c.field-meta.xml
<CustomField>
    <fullName>EvaluationsSubmitted__c</fullName>
    <label>Submitted Evaluations</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>