force-app/main/default/objects/Session__c/fields/FinalScore__c.field-meta.xml
<CustomField>
    <fullName>FinalScore__c</fullName>
    <label>Final Score</label>
    <type>Number</type>
    <precision>7</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>