force-app/main/default/objects/Session__c/fields/PrimarySpeakerBio__c.field-meta.xml
<CustomField>
    <fullName>PrimarySpeakerBio__c</fullName>
    <label>Primary Speaker Bio</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>