force-app/main/default/objects/Session__c/fields/PrimarySpeakerContact__c.field-meta.xml
<CustomField>
    <fullName>PrimarySpeakerContact__c</fullName>
    <label>Primary Speaker Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>PrimarySpeakerSessions</relationshipName>
    <relationshipLabel>Sessions (Primary Speaker)</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>