force-app/main/default/objects/Session__c/fields/PrimarySpeakerEmail__c.field-meta.xml
<CustomField>
    <fullName>PrimarySpeakerEmail__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <label>Primary Speaker Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>