force-app/main/default/objects/Session__c/fields/PrimarySpeakerJobTitle__c.field-meta.xml
<CustomField>
    <fullName>PrimarySpeakerJobTitle__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <label>Primary Speaker Job Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>