force-app/main/default/objects/Session__c/fields/PrimarySpeakerLinkedIn__c.field-meta.xml
<CustomField>
    <fullName>PrimarySpeakerLinkedIn__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <label>Primary Speaker LinkedIn</label>
    <type>Url</type>
</CustomField>