force-app/main/default/objects/Session__c/fields/PrimarySpeakerName__c.field-meta.xml
<CustomField>
    <fullName>PrimarySpeakerName__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <label>Primary Speaker Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>