force-app/main/default/objects/Session__c/fields/Reserve__c.field-meta.xml
<CustomField>
    <fullName>Reserve__c</fullName>
    <label>Reserve</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>