force-app/main/default/objects/Session__c/fields/Selection_Status__c.field-meta.xml
<CustomField>
    <fullName>Selection_Status__c</fullName>
    <label>Selection Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Selected</fullName>
                <default>true</default>
                <label>Not Selected</label>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Reserve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>