force-app/main/default/objects/Session__c/fields/SessionLink__c.field-meta.xml
<CustomField>
    <fullName>SessionLink__c</fullName>
    <label>Session Link</label>
    <type>Url</type>
</CustomField>