force-app/main/default/objects/Session__c/fields/SessionReference__c.field-meta.xml
<CustomField>
    <fullName>SessionReference__c</fullName>
    <label>Session Reference</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
</CustomField>