force-app/main/default/objects/Session__c/fields/SomethingElse__c.field-meta.xml
<CustomField>
    <fullName>SomethingElse__c</fullName>
    <label>Something Else</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>