force-app/main/default/objects/Session__c/fields/SubmissionDateTime__c.field-meta.xml
<CustomField>
    <fullName>SubmissionDateTime__c</fullName>
    <label>Submission Date Time</label>
    <type>DateTime</type>
</CustomField>