force-app/main/default/objects/Session__c/listViews/AllSessions.listView-meta.xml
<ListView>
    <fullName>AllSessions</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Category__c</columns>
    <columns>Language__c</columns>
    <columns>Level__c</columns>
    <columns>DurationMinutes__c</columns>
    <columns>Status__c</columns>
    <columns>FinalScore__c</columns>
    <columns>EvaluationsSubmitted__c</columns>
    <columns>Selected__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sessions</label>
</ListView>